--- a/.github/workflows/release-pypi.yaml
+++ b/.github/workflows/release-pypi.yaml
@@ -65,24 +65,10 @@ jobs:
         with:
           python-version: '3.13'
 
-      - name: Install maturin
-        run: |
-          python -m venv .venv
-          if [ -d ".venv/Scripts" ]; then
-            source ".venv/Scripts/activate"
-          else
-            source ".venv/bin/activate"
-          fi
-          pip install maturin # caution: pip install -U pip failed in windows vm
-
       - name: Build Python wheel
         run: |
-          if [ -d ".venv/Scripts" ]; then
-            source ".venv/Scripts/activate"
-          else
-            source ".venv/bin/activate"
-          fi
-          maturin build --release -F pyo3 --target ${{ matrix.target }} --locked
+          pip install maturin # caution: pip install -U pip failed in windows vm
+          maturin build --release -F pyo3 --target ${{ matrix.target }} --locked -i python3
       
       - name: Prepare artifacts
         run: |
