--- a/.github/workflows/release-pypi.yaml
+++ b/.github/workflows/release-pypi.yaml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Install maturin
         run: |
-          python -m venv .venv
+          python3 -m venv .venv
           if [ -d ".venv/Scripts" ]; then
             source ".venv/Scripts/activate"
           else
@@ -78,7 +78,7 @@ jobs:
           else
             source ".venv/bin/activate"
           fi
-          maturin build --release -F pyo3 --target ${{ matrix.target }} --locked -i python
+          maturin build --release -F pyo3 --target ${{ matrix.target }} --locked -i python3
       
       - name: Prepare artifacts
         run: |
