--- a/.github/workflows/release-pypi.yaml
+++ b/.github/workflows/release-pypi.yaml
@@ -27,16 +27,16 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: Linux-aarch64-musl
-            target: aarch64-unknown-linux-musl
-            os: ubuntu-latest
+          # - name: Linux-aarch64-musl
+          #   target: aarch64-unknown-linux-musl
+          #   os: ubuntu-latest
           - name: Linux-x64-gnu
             target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
             tag: LINUX-x86_64-gnu
-          - name: Linux-x64-musl
-            target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
+          # - name: Linux-x64-musl
+          #   target: x86_64-unknown-linux-musl
+          #   os: ubuntu-latest
           - name: macOS-aarch64
             target: aarch64-apple-darwin
             os: macos-latest
@@ -60,25 +60,14 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
-
-      - name: Install maturin
-        run: |
-          python3 -m venv .venv
-          if [ -d ".venv/Scripts" ]; then
-            source ".venv/Scripts/activate"
-          else
-            source ".venv/bin/activate"
-          fi
-          pip install maturin # caution: pip install -U pip failed in windows vm
-
+      
       - name: Build Python wheel
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
         run: |
-          if [ -d ".venv/Scripts" ]; then
-            source ".venv/Scripts/activate"
-          else
-            source ".venv/bin/activate"
-          fi
-          maturin build --release -F pyo3 --target ${{ matrix.target }} --locked -i python3
+          pip install maturin # caution: pip install -U pip failed in windows vm
+          maturin build --release -F pyo3 --target ${{ matrix.target }} --locked
       
       - name: Prepare artifacts
         run: |
