--- a/.github/workflows/release-pypi.yaml
+++ b/.github/workflows/release-pypi.yaml
@@ -1,11 +1,8 @@
 name: Release Executable
 
 on:
-  # release:
-  #   types: [created]
-  push:
-    branches:
-      - dev
+  release:
+    types: [created]
 
 permissions:
   contents: read
