--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdka"
-version = "1.3.0"
+version = "1.3.1"
 
 edition = "2021"
 authors = ["nabbisen <nabbisen@scqr.net>"]
@@ -15,14 +15,33 @@ rust-version = "1.74.0"
 
 [lib]
 name = "mdka"
-path = "src/lib.rs"
+crate-type = ["rlib", "cdylib"]
+
+[profile.release]     # shrink executable size
+opt-level = "z"
+lto = true
+# panic = "abort"
+strip = true
+codegen-units = 1
+
+[profile.dev]         # to reasonably improve productivity
+opt-level = 1         # slightly optimize
+lto = false           # disable link-time optimizations
+# strip = "debuginfo" # reduce size
+# incremental = true
+
+[features]
+default = []
+pyo3 = ["dep:pyo3"]
 
 [dependencies]
 html5ever = "^0.27"
 markup5ever_rcdom = "^0.3"
+pyo3 = { version = "^0.23", features = ["extension-module"], optional = true }
 
 [dev-dependencies]
 criterion = "^0.5"
+maturin = "1"
 
 [[example]]
 name = "trial"
