--- a/.github/workflows/release-executable.yaml
+++ b/.github/workflows/release-executable.yaml
@@ -16,7 +16,7 @@ defaults:
 env:
   PRODUCT_BASENAME: mdka
   TAG: ${{ github.ref_name }}          # tag or branch name
-  ARTIFACT_PATH: ${{ github.run_id }}  # unique number
+  WORKDIR: ${{ github.run_id }}  # unique number
 
 jobs:
   build:
@@ -28,28 +28,34 @@ jobs:
             target: aarch64-unknown-linux-musl
             os: ubuntu-latest
             bin_ext: 
+            asset_ext: .tar.gz
           - name: Linux-x64-gnu
             target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
             tag: LINUX-x86_64-gnu
             bin_ext: 
+            asset_ext: .tar.gz
           - name: Linux-x64-musl
             target: x86_64-unknown-linux-musl
             os: ubuntu-latest
             bin_ext: 
+            asset_ext: .tar.gz
           - name: macOS-aarch64
             target: aarch64-apple-darwin
             os: macos-latest
             bin_ext: 
+            asset_ext: .tar.gz
           - name: Windows-x64
             target: x86_64-pc-windows-msvc
             os: windows-latest
             bin_ext: .exe
+            asset_ext: .zip
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # [ build ]
       - name: Install Rust
         run: bash .github/workflows/scripts/install-rust.sh stable ${{ matrix.target }}
       
@@ -67,14 +73,35 @@ jobs:
         run: |
           cargo build --release --target ${{ matrix.target }} --bin ${PRODUCT_BASENAME} --locked
 
-      - name: Prepare artifacts
+      # [ release asset ]
+      - name: Prepare for release asset
         run: |
-          ARTIFACT_ROOT_DIR=${PRODUCT_BASENAME}#${{ env.TAG }}
-          mkdir -p "${ARTIFACT_PATH}/${ARTIFACT_ROOT_DIR}"
-          mv "target/${{ matrix.target }}/release/${PRODUCT_BASENAME}${{ matrix.bin_ext }}" "${ARTIFACT_PATH}/${ARTIFACT_ROOT_DIR}/"
+          BUILT_FILEPATH=target/${{ matrix.target }}/release/${PRODUCT_BASENAME}${{ matrix.bin_ext }}
+          RELEASE_ASSET_BASENAME=${{ env.PRODUCT_BASENAME }}@${{ matrix.name }}-${{ env.TAG }}
+          RELEASE_SRC=${WORKDIR}/${RELEASE_ASSET_BASENAME}
+          RELEASE_ASSET=${RELEASE_ASSET_BASENAME}${{ matrix.asset_ext }}
+
+          mkdir -p "${RELEASE_SRC}"
+          mv "${BUILT_FILEPATH}" "${RELEASE_SRC}/"
+          echo "RELEASE_SRC=${RELEASE_SRC}" >> $GITHUB_ENV
+          echo "RELEASE_ASSET=${RELEASE_ASSET_BASENAME}${{ matrix.asset_ext }}" >> $GITHUB_ENV
+
+      # BSD tar on macOS: first 8MB of the file are sometimes all NUL byte
+      # refs: https://github.com/actions/cache/issues/403 , https://github.com/rust-lang/cargo/issues/8603
+      - name: Mitigate macOS tar bug
+        if: matrix.target == 'aarch64-apple-darwin'
+        run: |
+          sudo /usr/sbin/purge
       
-      - name: Upload Rust build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.PRODUCT_BASENAME }}@${{ matrix.name }}#${{ env.TAG }}
-          path: ${{ env.ARTIFACT_PATH }}/*
+      - name: Create archive as release asset - Linux / macOS
+        if: matrix.target != 'x86_64-pc-windows-msvc'
+        run: |
+          tar czf ${RELEASE_ASSET} "${RELEASE_SRC}"
+      - name: Create archive as release asset - Windows
+        if: matrix.target == 'x86_64-pc-windows-msvc'
+        run: |
+          7z a ${RELEASE_ASSET} "${RELEASE_SRC}"
+      - name: Update release with new asset
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload ${{ github.ref_name }} ${RELEASE_ASSET}
