--- a/.github/workflows/release-pypi.yaml
+++ b/.github/workflows/release-pypi.yaml
@@ -5,9 +5,7 @@ on:
     types: [created]
 
 permissions:
-  contents: read
-  # used to sign the release artifacts
-  id-token: write
+  contents: write
 
 defaults:
   run:
@@ -15,8 +13,8 @@ defaults:
 
 env:
   PRODUCT_BASENAME: mdka
-  TAG: ${{ github.ref_name }}          # tag or branch name
-  WORKDIR: ${{ github.run_id }}  # unique number
+  TAG: ${{ github.ref_name }}            # tag or branch name
+  JOB_WORKDIR: tmp-${{ github.run_id }}  # unique number
 
 jobs:
   build:
@@ -40,7 +38,7 @@ jobs:
           - name: macOS-aarch64
             target: aarch64-apple-darwin
             os: macos-latest
-            asset_ext: .tar.gz
+            asset_ext: .zip
           - name: Windows-x64
             target: x86_64-pc-windows-msvc
             os: windows-latest
@@ -77,10 +75,10 @@ jobs:
       # [ release asset ]
       - name: Prepare for release asset
         run: |
-          mkdir -p "${{ env.WORKDIR }}"
-          mv "target/wheels" "${{ env.WORKDIR }}/"
-          echo "RELEASE_SRC=${{ env.WORKDIR }}/wheels" >> $GITHUB_ENV
-          echo "RELEASE_ASSET=pywhl-${{ env.PRODUCT_BASENAME }}@${{ matrix.name }}-${{ env.TAG }}${{ matrix.asset_ext }}" >> $GITHUB_ENV
+          mkdir -p "${{ env.JOB_WORKDIR }}"
+          mv "target/wheels" "${{ env.JOB_WORKDIR }}/"
+          echo "RELEASE_SRC_DIR=wheels" >> $GITHUB_ENV
+          echo "RELEASE_ASSET_FILENAME=pywhl-${{ env.PRODUCT_BASENAME }}@${{ matrix.name }}-${{ env.TAG }}${{ matrix.asset_ext }}" >> $GITHUB_ENV
       
       # BSD tar on macOS: first 8MB of the file are sometimes all NUL byte
       # refs: https://github.com/actions/cache/issues/403 , https://github.com/rust-lang/cargo/issues/8603
@@ -90,16 +88,22 @@ jobs:
           sudo /usr/sbin/purge
       
       - name: Create archive as release asset - Linux / macOS
-        if: matrix.target != 'x86_64-pc-windows-msvc'
+        if: >
+          matrix.target != 'aarch64-apple-darwin' &&
+          matrix.target != 'x86_64-pc-windows-msvc'
         run: |
-          tar czf ${RELEASE_ASSET} "${RELEASE_SRC}"
+          cd "${{ env.JOB_WORKDIR }}"
+          tar czf "../${RELEASE_ASSET_FILENAME}" "${RELEASE_SRC_DIR}"
 
       - name: Create archive as release asset - Windows
-        if: matrix.target == 'x86_64-pc-windows-msvc'
+        if: >
+          matrix.target == 'aarch64-apple-darwin' ||
+          matrix.target == 'x86_64-pc-windows-msvc'
         run: |
-          7z a ${RELEASE_ASSET} "${RELEASE_SRC}"
+          cd "${{ env.JOB_WORKDIR }}"
+          7z a "../${RELEASE_ASSET_FILENAME}" "${RELEASE_SRC_DIR}"
 
       - name: Update release with new asset
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ github.ref_name }} ${RELEASE_ASSET}
+        run: gh release upload ${{ github.ref_name }} ${RELEASE_ASSET_FILENAME}
