--- a/.github/workflows/release-pypi.yaml
+++ b/.github/workflows/release-pypi.yaml
@@ -28,6 +28,18 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      
+      - name: Cache cargo dependencies and build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -55,6 +67,18 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      
+      - name: Cache cargo dependencies and build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -81,6 +105,18 @@ jobs:
         with:
           python-version: 3.x
           architecture: ${{ matrix.platform.target }}
+      
+      - name: Cache cargo dependencies and build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -105,6 +141,18 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      
+      - name: Cache cargo dependencies and build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
