--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@ target/
 # custom
 tests/tmp/*
 !tests/tmp/.gitkeep
+
+# napi
+node_modules/
+*.node
+bun.lock
+bun.lockb
+.env
+.env.*
+!.env.example
