--- a/napi/package.json
+++ b/napi/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mdka",
-    "version": "0.9.0",
+    "version": "1.5.0-rc.1",
     "description": "HTML to Markdown converter",
     "author": "nabbisen<nabbisen@scqr.net>",
     "license": "Apache-2.0",
@@ -15,8 +15,7 @@
     ],
     "files": [
         "index.js",
-        "index.d.ts",
-        "scripts"
+        "index.d.ts"
     ],
     "main": "index.js",
     "types": "index.d.ts",
