--- a/napi/package.json
+++ b/napi/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mdka",
-    "version": "1.5.0-rc.5",
+    "version": "1.5.0",
     "description": "HTML to Markdown converter",
     "author": "nabbisen<nabbisen@scqr.net>",
     "license": "Apache-2.0",
