--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdka"
-version = "1.5.2"
+version = "1.5.3"
 edition = "2021"
 
 description = "HTML to Markdown converter"
@@ -11,7 +11,7 @@ keywords = ["html", "markdown", "parser", "conversion"]
 repository = "https://github.com/nabbisen/mdka-rs"
 readme = "README.md"
 
-rust-version = "1.77.0"
+rust-version = "1.74.0"
 
 [lib]
 name = "mdka"
@@ -49,7 +49,7 @@ criterion = "0"
 maturin = "1"
 
 [build-dependencies]
-napi-build = { version = "2", optional = true }
+napi-build = { version = "=2.2.0", optional = true }
 
 [[example]]
 name = "trial"
