--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mdka"
-version = "1.5.4"
-edition = "2021"
+version = "1.6.0"
+edition = "2024"
 
 description = "HTML to Markdown converter"
 authors = ["nabbisen <nabbisen@scqr.net>"]
@@ -11,7 +11,7 @@ keywords = ["html", "markdown", "parser", "conversion"]
 repository = "https://github.com/nabbisen/mdka-rs"
 readme = "README.md"
 
-rust-version = "1.74.0"
+rust-version = "1.85.0"
 
 [lib]
 name = "mdka"
@@ -39,7 +39,7 @@ napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
 html5ever = "^0.27"
 markup5ever_rcdom = "^0.3"
 # binding for python
-pyo3 = { version = "^0.25", features = ["extension-module"], optional = true }
+pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
 # binding for node.js
 napi = { version = "2", default-features = false, features = ["napi5", "async"], optional = true }
 napi-derive = { version = "2", optional = true }
@@ -49,7 +49,7 @@ criterion = "0"
 maturin = "1"
 
 [build-dependencies]
-napi-build = { version = "=2.2.0", optional = true }
+napi-build = { version = "2", optional = true }
 
 [[example]]
 name = "trial"
