fix #75 napi-rs v2 to v3 migration

--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -124,7 +124,7 @@ jobs:
       
       - name: Move artifacts
         run: |
-          npm run create-npm-dir
+          npm run create-npm-dirs
           npm run artifacts
       
       - name: List packages
