--- a/napi/package.json
+++ b/napi/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mdka",
-    "version": "1.6.0",
+    "version": "1.6.1",
     "description": "HTML to Markdown converter",
     "author": "nabbisen<nabbisen@scqr.net>",
     "license": "Apache-2.0",
@@ -60,7 +60,7 @@
         "test": "ava",
         "universal": "napi universal",
         "version": "napi version",
-        "create-npm-dir": "napi create-npm-dir -t .",
-        "prepublishOnly": "napi prepublish --skip-gh-release"
+        "create-npm-dirs": "napi create-npm-dirs",
+        "prepublishOnly": "napi pre-publish --no-gh-release"
     }
 }
