revert to napi v2 (temporarily for publish)

--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -125,7 +125,7 @@ jobs:
       
       - name: Move artifacts
         run: |
-          npm run create-npm-dirs
+          npm run create-npm-dir
           npm run artifacts
       
       - name: List packages
