--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -85,11 +85,22 @@ jobs:
           path: ${{ env.PRODUCT_BASENAME }}.*.node
           if-no-files-found: error
   
-  publish:
-    name: Publish on release tags
-    needs:
-      - build
-    runs-on: ubuntu-latest
+  npm-platforms-publish:
+    runs-on: ${{ matrix.os }}
+    needs: build
+    strategy:
+      matrix:
+        include:
+          - name: Linux-x64-gnu
+            npm-target: linux-x64-gnu
+            os: ubuntu-latest
+          - name: macOS-aarch64
+            npm-target: darwin-arm64
+            os: macos-latest
+          - name: Windows-x64
+            npm-target: win32-x64-msvc
+            os: windows-latest
+    # todo
     steps:
       - name: Check if release tag
         run: |
@@ -100,42 +111,101 @@ jobs:
             echo "Not a release tag. Skipped."
             exit 1
           fi
-
-      - uses: actions/checkout@v4
-
-      - name: Prepare napi
-        run: cp -r napi/* .
-        # todo: better ? to replace w/
-        # working-directory: napi
+      
+      - name: Checkout repository
+        uses: actions/checkout@v4
       
       - name: Setup node
         uses: actions/setup-node@v4
         with:
           node-version: 24
           registry-url: 'https://registry.npmjs.org'
-          cache: npm
       
-      - name: Install dependencies
-        run: npm install
-      
-      - name: Download all artifacts
+      - name: Download built binary
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
+          name: ${{ env.PRODUCT_BASENAME }}-${{ matrix.name }}-${{ env.TAG }}
+          path: npm/${{ matrix.npm-target }}
       
-      - name: Move artifacts
+      - name: npm publish
+        working-directory: npm/${{ matrix.npm-target }}
         run: |
-          npm run create-npm-dir
-          npm run artifacts
-      
-      - name: List packages
-        run: ls -R ./npm
-        shell: bash
-      
-      - name: Publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
+          npm install --package-lock-only
           npm ci
           npm publish
+
+  npm-core-publish:
+    runs-on: ubuntu-latest
+    needs: npm-platforms-publish
+    # todo
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          registry-url: 'https://registry.npmjs.org'
+      
+      - name: npm publish
+        working-directory: npm
+        run: |
+          npm install --package-lock-only
+          npm ci
+          npm publish
+  
+  # publish:
+  #   name: Publish on release tags
+  #   needs:
+  #     - build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check if release tag
+  #       run: |
+  #         if [[ "${TAG}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] || \
+  #            [[ "${TAG}" =~ ^[0-9]+\.[0-9]+\.[0-9]-rc\.[0-9]+$ ]]; then
+  #           echo "${TAG}: Semantic versioning tagged - OK"
+  #         else
+  #           echo "Not a release tag. Skipped."
+  #           exit 1
+  #         fi
+
+  #     - uses: actions/checkout@v4
+
+  #     - name: Prepare napi
+  #       run: cp -r napi/* .
+  #       # todo: better ? to replace w/
+  #       # working-directory: napi
+      
+  #     - name: Setup node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 24
+  #         registry-url: 'https://registry.npmjs.org'
+  #         cache: npm
+      
+  #     - name: Install dependencies
+  #       run: npm install
+      
+  #     - name: Download all artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         path: artifacts
+      
+  #     - name: Move artifacts
+  #       run: |
+  #         npm run create-npm-dirs
+  #         npm run artifacts
+      
+  #     - name: List packages
+  #       run: ls -R ./npm
+  #       shell: bash
+      
+  #     - name: Publish
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  #       run: |
+  #         npm ci
+  #         npm publish
