--- a/napi/package.json
+++ b/napi/package.json
@@ -1,69 +1,60 @@
 {
-    "name": "mdka",
-    "version": "1.6.5",
-    "description": "HTML to Markdown converter",
-    "author": "nabbisen<nabbisen@scqr.net>",
-    "license": "Apache-2.0",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/nabbisen/mdka-rs.git"
-    },
-    "keywords": [
-        "html",
-        "markdown",
-        "html-to-markdown",
-        "markdown-generator",
-        "generate-markdown",
-        "html-parser",
-        "text",
-        "string",
-        "document",
-        "convert",
-        "converter",
-        "parser",
-        "transform",
-        "napi",
-        "native-addon"
-    ],
-    "files": [
-        "index.js",
-        "index.d.ts"
-    ],
-    "main": "index.js",
-    "types": "index.d.ts",
-    "napi": {
-        "name": "mdka",
-        "package": {
-            "name": "@mdka/lib"
-        },
-        "triples": {
-            "defaults": false,
-            "additional": [
-                "x86_64-unknown-linux-gnu",
-                "arm64-apple-darwin",
-                "x86_64-pc-windows-msvc"
-            ]
-        }
-    },
-    "devDependencies": {
-        "@napi-rs/cli": "^2.18.4",
-        "ava": "^6.4.1"
-    },
-    "ava": {
-        "timeout": "3m"
-    },
-    "engines": {
-        "node": ">= 20"
-    },
-    "scripts": {
-        "artifacts": "napi artifacts",
-        "build": "napi build --release --platform --features napi",
-        "build:debug": "napi build --platform --features napi",
-        "build:local": "napi build --platform --features napi --cargo-cwd ../",
-        "test": "ava",
-        "universal": "napi universal",
-        "version": "napi version",
-        "create-npm-dir": "napi create-npm-dir -t .",
-        "prepublishOnly": "napi prepublish --skip-gh-release"
-    }
+  "name": "mdka",
+  "version": "1.6.6-rc.1",
+  "description": "HTML to Markdown converter",
+  "author": "nabbisen<nabbisen@scqr.net>",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nabbisen/mdka-rs.git"
+  },
+  "keywords": [
+    "html",
+    "markdown",
+    "html-to-markdown",
+    "markdown-generator",
+    "generate-markdown",
+    "html-parser",
+    "text",
+    "string",
+    "document",
+    "convert",
+    "converter",
+    "parser",
+    "transform",
+    "napi",
+    "native-addon"
+  ],
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
+  "main": "index.js",
+  "types": "index.d.ts",
+  "optionalDependencies": {
+    "@mdka/lib-linux-x64-gnu": "1.6.6-rc.1",
+    "@mdka/lib-darwin-arm64": "1.6.6-rc.1",
+    "@mdka/lib-win32-x64-msvc": "1.6.6-rc.1"
+  },
+  "devDependencies": {
+    "@napi-rs/cli": "^3.5.1",
+    "ava": "^6.4.1"
+  },
+  "ava": {
+    "timeout": "3m"
+  },
+  "engines": {
+    "node": ">= 20"
+  },
+  "scripts": {
+    "artifacts": "napi artifacts",
+    "build": "napi build --release --platform --features napi",
+    "build:debug": "napi build --platform --features napi",
+    "build:local": "napi build --platform --features napi --manifest-path ../Cargo.toml",
+    "test": "ava",
+    "universal": "napi universal",
+    "version": "napi version",
+    "create-npm-dirs": "napi create-npm-dirs",
+    "prepublishOnly": "napi pre-publish --no-gh-release"
+  }
 }
